--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             debugger;
             t= t + 1;
             if (t % 2 == 0)
-            document.getElementById("mp4_src"). src= 
+            document.getElementById("mp4_src"). src= "https://www.nhaccuatui.com/lh/auto/17140294122iI9"
             else
             document.getElementById("mp4_src"). src= 
             document.getElementById("myAudio").load();
