--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title> Hồ Cá CSS3</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="./CSS/Nhap.css">
+	<link rel="stylesheet" href="./CSS/mystyles.css">
 </head>
 <body>
     <img src="./Image/background1.jpg" style="width: 100vw; height: 100vh;">
